--- a/popup.html
+++ b/popup.html
@@ -27,11 +27,14 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="popup.js"></script>
+    <script src="jquery-2.1.4.js"></script>
+    <!--script src="popup.js"></script-->
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+    <div id="status">UW Bookstore Data</div>
+    <!--button type="button" id="testMe">Click Me!</button>
+    <!--button id="button">Test</button>
+    <!--img id="image-result" hidden-->
   </body>
 </html>
 
